assets/user-creation.css
* {
  font-family: 'Orbitron', monospace, sans-serif;
  color: azure;
}

body {
    background-image: url("https://i.gifer.com/3QAe.gif");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
  }


.title h1 {
  text-shadow: 1px 3px rgb(203, 203, 56);
}

  .loader-hidden {
    font-size: 60px;
    color: white;
    text-align: center;
    display: none;
    margin: 20%;
  }

  

  #all-content-hider {
    display: none;
    border-radius: 20%;
    animation: glowing 4s;
  }

#created-name {
  color: #e1ff00;
  text-shadow: 1px 2px #8800ff;
}

.name-img {
  border-radius: 20%;
  margin: 5vh;
  animation: pulse 5s infinite;
}

#cocktail-picture img {
  border: solid #8800ff10;
  border-radius: 20%;
  padding: 5%;
  background: #e1ff0020;
}

#user-horo {
  background-color: wheat;
}

.ins-rec {
  margin-top: 5%;
}

@keyframes glowing {
  0% { box-shadow: inset 3000px 0 5px #fbff00; }
  50% { box-shadow: inset 0 0 20px #e2ed6c; }
  100% { box-shadow: inset 0 0 1px #fff; }
}

@keyframes pulse {
  0% { outline: solid 30px #00ffea95; }

  25% { outline: solid 25px #00c8ff95; } 

  50% { outline: solid 20px #00e5ff95; }

  75% { outline: solid 25px #00ffdd95; } 

  100% { outline: solid 30px #00ffea95; }
}

